<resources>
    <string name="app_name">Staffedition</string>
    <string name="helpxpert">HelpXpert</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in1">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_a_report_handler">Select A Report Handler</string>
    <string name="type_a_message">Type a Message</string>
    <string name="online">Online</string>
</resources>